--- a/selector.html
+++ b/selector.html
@@ -7,18 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="firstclass" class="room1"> Room 1</div>
-    <div class="room2"> Room 2</div>
-    <div class="room3"> Room 3</div>
-    <div class="room4"> Room 4</div>
+    <div id="firstclass" class="room"> Room 1</div>
+    <div class="room"> Room 2</div>
+    <div class="room"> Room 3</div>
+    <div class="room"> Room 4</div>
     <b>Search Engine :</b>
     <input type="text" id="search"> 
     <button style="height: 30px; width: 70px;">Search</button>
 </body>
 <script>
     let a = document.getElementById("firstclass");
-    a.innerText = "Hacked" ;
-    a.style.color = 'red';
+    let b = document.querySelector(".room");
+    console.log(b.innerHTML);
+    b.innerHTML = "<b> Hi </b>";
+    
 
 
 </script>
