--- a/create.html
+++ b/create.html
@@ -21,6 +21,7 @@
     var a = document.getElementById("firstclass");
     a.className = "Red";
     a.id = 'Amit';
+    a.setAttribute("")
     console.log(a);
 </script>
 </html>
