--- a/event2.html
+++ b/event2.html
@@ -40,12 +40,7 @@ back.addEventListener('mouseover',(e)=>{
     document.body.style.backgroundColor = `rgb(${e.offsetX%125},${e.offsetY%125},${(e.offsetX+e.offsetY)%125})`;
 });
 
-console.log(back);
-
-
-
-//document.body.style.backgroundColor = `rgb(${})`;
-
+//console.log(back);
 
 </script>
 </html>
