--- a/storage.html
+++ b/storage.html
@@ -26,5 +26,9 @@
     let sname = sessionStorage.getItem('sName3')
     sname = JSON.parse(sname);
     console.log(sname);
+
+    localStorage.clear();
+    sessionStorage.clear();
+    
 </script>
 </html>
