--- a/storage.html
+++ b/storage.html
@@ -30,5 +30,8 @@
     localStorage.clear();
     sessionStorage.clear();
     
+    console.log(name);
+    console.log(sname);
+
 </script>
 </html>
