--- a/storage.html
+++ b/storage.html
@@ -17,7 +17,7 @@
     let name = localStorage.getItem('Name3')
     name = JSON.parse(name);
 
-    console.log(name);
+    //console.log(name);
   
     sessionStorage.setItem('sName','Anand');
     sessionStorage.setItem('sName2','Arun');
@@ -25,13 +25,13 @@
     sessionStorage.setItem('sName3',JSON.stringify(sarr));
     let sname = sessionStorage.getItem('sName3')
     sname = JSON.parse(sname);
-    console.log(sname);
+  //  console.log(sname);
 
     localStorage.clear();
     sessionStorage.clear();
     
-    console.log(name);
-    console.log(sname);
+   // console.log(name);
+   // console.log(sname);
 
 </script>
 </html>
