add note to localstorage

--- a/Notes/index.html
+++ b/Notes/index.html
@@ -33,7 +33,7 @@
     </nav>
     <div class="container my-3">
         <h1>Welcome to Magic notes</h1>
-        <div class="card"">
+        <div class="card">
             <!-- <img src=" ..." class="card-img-top" alt="..."> -->
             <div class="card-body">
                 <h5 class="card-title">Magic Notes</h5>
